Fix alignment of contents in last div element

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -12,9 +12,9 @@ body {
 
 .title {
   background: #e3f4ff;
-margin: 10px;
-font-size: 16px;
-padding: 10px;
+  margin: 10px;
+  font-size: 16px;
+  padding: 10px;
 }
 
 .content {
@@ -27,10 +27,13 @@ padding: 10px;
   background: #e3f4ff;
   margin: 10px;
   padding: 10px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
   padding: 10px;
+  display: block;
+  margin: 0 auto;
 }
